# stock-finder

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
stock_finder/: __init__.py  api.py  cli.py  fields.py  filters.py  mcp_server.py  output.py  presets.py  prompt_lib.py  service.py  signals.py
stock_finder/prompts/: compare.md  deep-dive.md  rebound-check.md
