[project]
name = "stock-finder"
version = "0.1.0"
description = "Screener de acciones desde la CLI usando la API del scanner de TradingView"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
stock-finder = "stock_finder.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stock_finder"]
